// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar navigation characterisation > company admin navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "aiRegister -> /app/governance/register",
    "askPlatform -> /app/assistant",
    "auditTrail -> /app/governance/audit-trail",
    "authDiagnostics -> /app/settings/auth-diagnostics",
    "billing -> /app/settings/billing",
    "calls -> /app/calls",
    "dashboard -> /app",
    "dashboard -> /app/settings",
    "governanceOverview -> /app/governance",
    "keywordResearch -> /app/keyword-research",
    "learn -> /app/news",
    "policiesInForce -> /app/governance/policies",
    "reception -> /app/reception",
    "searchConsole -> /app/search-console",
    "tasks -> /app/tasks",
    "teamMembers -> /app/settings/team",
    "usageByWebsite -> /app/usage/websites",
    "usageByWork -> /app/usage/work",
    "usageComingUp -> /app/usage/coming-up",
    "usageOverview -> /app/usage",
    "usageStatement -> /app/usage/statement",
    "yourSites -> /app/sites",
  ],
  "sections": [
    "governance",
    "organization",
    "sites",
    "usage",
  ],
}
`;

exports[`sidebar navigation characterisation > signed-out navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "askPlatform -> /app/assistant",
    "dashboard -> /app",
    "keywordResearch -> /app/keyword-research",
    "learn -> /app/news",
    "searchConsole -> /app/search-console",
    "usageByWebsite -> /app/usage/websites",
    "usageByWork -> /app/usage/work",
    "usageComingUp -> /app/usage/coming-up",
    "usageOverview -> /app/usage",
    "usageStatement -> /app/usage/statement",
    "yourSites -> /app/sites",
  ],
  "sections": [
    "sites",
    "usage",
  ],
}
`;

exports[`sidebar navigation characterisation > standard user navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "askPlatform -> /app/assistant",
    "calls -> /app/calls",
    "dashboard -> /app",
    "keywordResearch -> /app/keyword-research",
    "learn -> /app/news",
    "reception -> /app/reception",
    "searchConsole -> /app/search-console",
    "tasks -> /app/tasks",
    "usageByWebsite -> /app/usage/websites",
    "usageByWork -> /app/usage/work",
    "usageComingUp -> /app/usage/coming-up",
    "usageOverview -> /app/usage",
    "usageStatement -> /app/usage/statement",
    "yourSites -> /app/sites",
  ],
  "sections": [
    "sites",
    "usage",
  ],
}
`;

exports[`sidebar navigation characterisation > super admin navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "aiRegister -> /admin/governance/register",
    "allUsers -> /admin/directory",
    "allWebsites -> /admin/websites",
    "analytics -> /admin/settings/analytics",
    "apiKeys -> /admin/settings/api-keys",
    "auditTrail -> /admin/governance/audit-trail",
    "authDiagnostics -> /admin/auth-diagnostics",
    "billing -> /admin/settings/billing",
    "connections -> /admin/connections",
    "creditPrices -> /admin/settings/credit-prices",
    "dashboard -> /admin",
    "googleUpdates -> /admin/content/google-updates",
    "governanceApprovals -> /admin/governance/approvals",
    "governanceOverview -> /admin/governance",
    "health -> /admin/health",
    "invitations -> /admin/super-admins/invite",
    "knowledge -> /admin/content/knowledge",
    "manageAgents -> /admin/agents",
    "manageCompanies -> /admin/companies",
    "manageGlobalAi -> /admin/ai",
    "manageWorkflows -> /admin/workflows",
    "news -> /admin/content/news",
    "newsSources -> /admin/content/news-sources",
    "outbox -> /admin/content/outbox",
    "plans -> /admin/settings/plans",
    "policiesInForce -> /admin/governance/policies",
    "schedules -> /admin/workflows/schedules",
    "scripts -> /admin/settings/scripts",
    "seoCollection -> /admin/websites/collection",
    "seoCosts -> /admin/websites/costs",
    "systemAdmins -> /admin/super-admins",
    "systemSettings -> /admin/settings",
    "toolServers -> /admin/ai/tool-servers",
    "tools -> /admin/ai/tools",
    "whoToFollow -> /admin/content/who-to-follow",
    "workflowRuns -> /admin/workflows/executions",
  ],
  "sections": [
    "agents",
    "ai",
    "companies",
    "content",
    "governance",
    "maintenance",
    "settings",
    "userManagement",
    "websites",
  ],
}
`;
